# Publishing-to-PyPI-with-pbr-and-Travis

./: .travis.yml  README.PT.rst  README.PT.rst.  README.RO.rst  README.RU.rst  README.UA.rst  README.de.rst  README.en.rst  README.es.rst  README.fr.rst  README.id.rst  README.rst  setup.cfg  setup.py
docs/: conf.py  index.rst  main.rst
docs/_build/gettext/: index.pot  main.pot
docs/_build/gettext/.doctrees/: environment.pickle  index.doctree  main.doctree
docs/_build/html/es_ES/: .buildinfo  genindex.html  index.html  main.html  objects.inv  search.html  searchindex.js
docs/_build/html/es_ES/.doctrees/: environment.pickle  index.doctree  main.doctree
docs/_build/html/es_ES/_static/: documentation_options.js
docs/_build/html/fr_FR/: .buildinfo  genindex.html  index.html  main.html  objects.inv  search.html  searchindex.js
docs/_build/html/fr_FR/.doctrees/: environment.pickle  index.doctree  main.doctree
docs/_build/html/fr_FR/_static/: documentation_options.js
docs/locales/es_AR/LC_MESSAGES/: index.po  main.po
docs/locales/es_ES/LC_MESSAGES/: main.mo
docs/locales/fr_FR/LC_MESSAGES/: index.mo  index.po  main.mo
docs/locales/ro_RO/LC_MESSAGES/: main.po
docs/locales/ru_RU/LC_MESSAGES/: index.po
