[metadata]
name = Publishing to PyPI with PBR and Travis

author = Maël Pedretti

author_email = mael.pedretti@he-arc.ch

summary = Publishing to Pypi with PBR and Travis.

license = MIT

description-file =
    README.rst

home-page = https://github.com/73VW/Publishing-to-PyPI-with-pbr-and-Travis

python_requires = >=3.6

classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Education
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Home Automation

[files]
data_files =
    some/example = some/example/*

[entry_points]
console_scripts =
    automabot = your_package.__main__:main
